tests/ui/traits/const-traits/const-bounds-non-const-trait.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-bounds-non-const-trait.rs:6:21
   |
LL | const fn perform<T: ~const NonConst>() {}
   |                     ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-bounds-non-const-trait.rs:6:21
   |
LL | const fn perform<T: ~const NonConst>() {}
   |                     ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `const` can only be applied to `#[const_trait]` traits
  --> $DIR/const-bounds-non-const-trait.rs:10:15
   |
LL | fn operate<T: const NonConst>() {}
   |               ^^^^^

error: aborting due to 3 previous errors

